k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ctxai
  namespace: ctxai
spec:
  type: ClusterIP
  selector:
    app: ctxai
  ports:
    - port: 80
      targetPort: 8000
      name: http
